# autograde-essay

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: main.yml
autograde_essay/: dvc_test.py  infer.py  metrics.py  preprocess.py  train.py  utils.py
autograde_essay/data/: .gitignore  test_set.tsv.dvc
config/: config.yaml
data/: training_set_rel3.tsv.dvc
tests/: test_version.py
