[tool.poetry]
name = "autograde_essay"
version = "0.1.0"
description = "Machine learning model which will give scoring to student-written essays"
authors = ["Maxim Andreyko <mandreiko@edu.hse.ru>"]
maintainers = ["Maxim Andreyko <mandreiko@edu.hse.ru>"]
readme = "README.md"
repository = "https://github.com/MaxAndreyko/autograde-essay"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
isort="5.13.2"
dvc = "^3.36.1"
dvc-gdrive = "^3.0.0"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
src_paths = ["autograde_essay"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
